Temine la seccion 3 navegacion ionic 3

--- a/src/pages/principal/principal.html
+++ b/src/pages/principal/principal.html
@@ -1,15 +1,21 @@
-<!--
-  Generated template for the PrincipalPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-    <ion-navbar>
-        <ion-title>PRINCIPAL - ROOT</ion-title>
+    <ion-navbar color="primary">
+        <ion-title text-center> PRINCIPAL - ROOT</ion-title>
+
+        <ion-buttons left>
+            <button ion-button icon-only (click)="mostrarMenu()">
+                  <ion-icon name="menu"></ion-icon>
+             </button>
+        </ion-buttons>
     </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-    <h1>Root</h1>
+
+    <button ion-button block color="primary" (click)="navegarPagina()">
+            Ir a pagina 2
+    </button>
+    <button ion-button block color="secondary" [navPush]="pagina2">
+        Ir a pagina 2 - HTML
+    </button>
 </ion-content>
