--- a/src/pages/ajustes/ajustes.html
+++ b/src/pages/ajustes/ajustes.html
@@ -1,15 +1,20 @@
-<!--
-  Generated template for the AjustesPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-  <ion-navbar>
-    <ion-title>ajustes</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title text-center>ajustes</ion-title>
+
+        <ion-buttons left>
+            <button ion-button icon-only menuToggle>
+                  <ion-icon name="menu"></ion-icon>
+             </button>
+        </ion-buttons>
+    </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
+    <button ion-button block (click)="activarPrincipal()">
+      Activar Principal
+   </button>
+    <button ion-button block color="morado" (click)="mostrar_modal()">
+      Mostrar Modal
+   </button>
 </ion-content>
