--- a/src/pages/pagina2/pagina2.html
+++ b/src/pages/pagina2/pagina2.html
@@ -1,15 +1,23 @@
-<!--
-  Generated template for the Pagina2Page page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-  <ion-navbar>
-    <ion-title>pagina2</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>pagina2</ion-title>
+    </ion-navbar>
 </ion-header>
 
 <ion-content padding>
+    <h1>Enviando con evento</h1>
 
+    <ion-list>
+        <ion-item *ngFor="let mutante of mutantes" (click)="irPagina3(mutante)">
+            {{mutante.nombre}}
+        </ion-item>
+    </ion-list>
+
+    <h1>Enviando con evento - HTML</h1>
+
+    <ion-list>
+        <ion-item *ngFor="let mutante of mutantes" [navPush]="pagina3" [navParams]="{'mutante':mutante}">
+            {{mutante.nombre}}
+        </ion-item>
+    </ion-list>
 </ion-content>
