--- a/src/pages/pagina3/pagina3.html
+++ b/src/pages/pagina3/pagina3.html
@@ -1,15 +1,19 @@
-<!--
-  Generated template for the Pagina3Page page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-  <ion-navbar>
-    <ion-title>pagina3</ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-title>{{mutante.nombre}}</ion-title>
+    </ion-navbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content padding tex-center>
+    <h3>{{mutante.poder}}</h3>
 
+    <button ion-button block color="primary" (click)="irAtras()">
+        ir atras con evento
+    </button>
+    <button ion-button block color="secondary" (click)="irRoot()">
+      ir al root
+    </button>
+    <button ion-button block color="danger" navPop>
+      ir atras sin eventos
+    </button>
 </ion-content>
